[tool.poetry]
name = "arxiv-slack-bot"
version = "0.1.0"
description = "Retrieves information of theses posted on arxiv.org and send its summary to Slack."
authors = ["t0d4 <todatakaaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
arxiv = "^1.4.7"
transformers = "^4.29.2"
slack-bolt = "^1.18.0"
deepl = "^1.14.0"
python-dotenv = "^1.0.0"
sympy = "^1.12"
torch = "^2.0.1"
langchain = "^0.0.180"
pypdf = "^3.9.0"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.270"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
